force-app/main/default/objects/WorkOrder/fields/Customer_Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>Customer_Approval_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Approval Required</label>
    <type>Checkbox</type>
</CustomField>