force-app/main/default/objects/WorkOrder/fields/Vehicle_w__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_w__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle_w</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>Work Orders (Vehicle_w)</relationshipLabel>
    <relationshipName>Work_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>