force-app/main/default/objects/WorkOrder/recordTypes/Emergency_Repair.recordType-meta.xml
<RecordType>
    <fullName>Emergency_Repair</fullName>
    <active>true</active>
    <description>Urgent repair work</description>
    <label>Emergency Repair</label>
</RecordType>