force-app/main/default/objects/WorkOrder/recordTypes/Scheduled_Maintenance.recordType-meta.xml
<RecordType>
    <fullName>Scheduled_Maintenance</fullName>
    <active>true</active>
    <description>Routine maintenance and preventive services</description>
    <label>Scheduled Maintenance</label>
</RecordType>